--- a/src/app/dashboard/dashboard-components/our-visiter/our-visiter.component.html
+++ b/src/app/dashboard/dashboard-components/our-visiter/our-visiter.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-content>
-    <mat-card-title>Statistique des commandes</mat-card-title>
-    <mat-card-subtitle>Visu des articles les plus commandés </mat-card-subtitle>
+    <mat-card-title>Statistique des demandes</mat-card-title>
+    <mat-card-subtitle>Visu </mat-card-subtitle>
     <div class="piechart">
       <apx-chart
         [series]="VisitorChartOptions.series"
