--- a/src/app/dashboard/dashboard-components/sales-overview/sales-overview.component.html
+++ b/src/app/dashboard/dashboard-components/sales-overview/sales-overview.component.html
@@ -2,7 +2,7 @@
   <mat-card-content>
     <div class="d-flex flex-wrap">
       <div>
-        <mat-card-title>Visu des ventes</mat-card-title>
+        <mat-card-title>Statisques des enrolements</mat-card-title>
         <mat-card-subtitle>Diagramme en baton </mat-card-subtitle>
       </div>
       <div class="ml-auto">
