--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -51,8 +51,8 @@
                [(ngModel)]="registerRequest.role"
       >
 
-        <option value="USER">Revendeur</option>
-        <option value="ADMIN">Responsable clientèle</option>
+        <option value="USER">Admin</option>
+        <option value="ADMIN">Super Admin</option>
       </select>
     </div>
 
