--- a/src/app/material-component/chips/chips.component.html
+++ b/src/app/material-component/chips/chips.component.html
@@ -1,54 +1,82 @@
-<mat-card>
-  <mat-card-content>
-    <mat-card-title>Basic Chips</mat-card-title>
-    <mat-card-subtitle><code>&lt;mat-chip&gt;</code>displays a list of values as individual, keyboard accessible, chips.
-      <code
-        class=""><a href="https://material.angular.io/components/chips/overview">Official Component</a></code></mat-card-subtitle>
-    <mat-chip-listbox aria-label="Fish selection">
-      <mat-chip-option>One fish</mat-chip-option>
-      <mat-chip-option>Two fish</mat-chip-option>
-      <mat-chip-option color="accent" selected>Accent fish</mat-chip-option>
-      <mat-chip-option color="warn">Warn fish</mat-chip-option>
-    </mat-chip-listbox>
+<div class="row">
+  <p class="text-center col-4">
+    <a  href="/add-payment-form">
+      <button mat-fab extended color="accent" >
+        <mat-icon>plus_one</mat-icon>
+        Enrégistrer un paiement
+      </button>
+    </a>
+  </p>
+</div>
 
-  </mat-card-content>
-</mat-card>
 
-<mat-card>
-  <mat-card-content>
-    <mat-card-title>Chip input</mat-card-title>
-    <mat-card-subtitle>The MatChipInput directive can be used together with a chip-list to streamline the interaction
-      between the two components. This directive adds chip-specific behaviors to the input element within for adding and
-      removing chips. </mat-card-subtitle>
+<div class="row">
+  <!-- Card column -->
+  <div class="col-12">
+    <!--    Form to add new user-->
+    <!--End Verification-->
+    <!--    List of users-->
 
-    <mat-form-field class="demo-chip-list">
-      <mat-label>Favorite Fruits</mat-label>
-      <mat-chip-grid #chipGrid aria-label="Enter fruits">
-        <mat-chip-row *ngFor="let fruit of fruits" (removed)="remove(fruit)" [editable]="true"
-          (edited)="edit(fruit, $event)" [aria-description]="'press enter to edit ' + fruit.name">
-          {{fruit.name}}
-          <button matChipRemove [attr.aria-label]="'remove ' + fruit.name">
-            <mat-icon>cancel</mat-icon>
-          </button>
-        </mat-chip-row>
-        <input placeholder="New fruit..." [matChipInputFor]="chipGrid"
-          [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
-          (matChipInputTokenEnd)="add($event)" />
-      </mat-chip-grid>
-    </mat-form-field>
-  </mat-card-content>
-</mat-card>
+    <mat-card>
+      <mat-card-content>
+        <mat-card-title>Liste des paiements</mat-card-title>
+        <mat-card-subtitle> Tableau récapitulatif des paiements initiés .</mat-card-subtitle>
+      </mat-card-content>
 
-<mat-card>
-  <mat-card-content>
-    <mat-card-title>Stacked Chips</mat-card-title>
-    <mat-card-subtitle>You can also stack the chips if you want them on top of each other and/or use the
-      <code>(focus)</code> event to run custom code.</mat-card-subtitle>
 
-    <mat-chip-listbox class="mat-mdc-chip-set-stacked" aria-label="Color selection">
-      <mat-chip-option *ngFor="let chip of availableColors" selected [color]="chip.color">
-        {{chip.name}}
-      </mat-chip-option>
-    </mat-chip-listbox>
-  </mat-card-content>
-</mat-card>
+      <table class="mat-elevation-z8 table  table-striped" >
+        <!-- Position Column -->
+        <thead>
+        <tr>
+          <th>#</th>
+          <th>Montant.</th>
+          <th>Motif du paiement.</th>
+          <th>Date de paiement.</th>
+          <th>Nom client concerné.</th>
+          <!-- <th>Nom caissier.</th> -->
+        </tr>
+        </thead>
+        <tbody>
+
+        <tr  *ngFor="let payment of payments">
+            
+         <td><i class="text-info fas fa-cart-plus fa-2x"></i></td>
+         <td  class="text-danger">{{payment.montant}}  XAF</td>
+         <td class="text-success">{{payment.motif}} </td>
+         <td>{{payment.dateDePaiement}} </td>
+         <!-- <td>{{payment.user.firstname}}</td> -->
+         <td>{{payment.customer.firstname}}</td>
+
+          <!-- <td>
+            <button class="btn btn-danger" title="Etes vous sure de vouloir annuler ?">
+               <i class="fas fa-trash"></i> Annuler
+            </button>
+          </td> -->
+        </tr>
+        </tbody>
+        <!-- Name Column -->
+      </table>
+
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                     showFirstLastButtons
+                     aria-label="Select page of periodic elements">
+      </mat-paginator>
+
+    </mat-card>
+    <!--    End of Table-->
+
+    <mat-card style="color:white;">
+      <mat-card-content style="color:white;">
+        <mat-card-title>Customizing menu position </mat-card-title>
+        <mat-card-subtitle style="color:white;">By default, the menu will display below (y-axis), after (x-axis), without overlapping its trigger. The position can be changed using the xPosition (before | after) and yPosition (above | below) attributes. The menu can be forced to overlap the trigger using the overlapTrigger attribute.
+        </mat-card-subtitle>
+        <mat-menu style="color:white;" #appMenu="matMenu" yPosition="above">
+          <button mat-menu-item>Settings</button>
+          <button mat-menu-item>Help</button>
+        </mat-menu>
+
+
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
